# OSSKEY

./: .gitignore  CHECKSUMS.md  README.md  RELEASE_CHECKLIST.md
.github/workflows/: ci.yml
docs/: DEV_GUIDE.md  SECURITY_CHECKLIST.md  USER_GUIDE.md
firmware/: FLASH_INSTRUCTIONS.md  aes.py  boot.py  code.py  hid_inject.py  led.py  serial_handler.py  vault.py
firmware/tests/: conftest.py  test_firmware_aes.py  test_firmware_serial.py
host/: main.py  osskey.spec  pyproject.toml  requirements.txt
host/osskey/: app.py  app_state.py  autotype.py  config.py  crypto.py  inactivity.py  serial_comms.py  vault.py  vault_ops.py
host/osskey/views/: dialogs.py  edit_credential_view.py  settings_view.py  unlock_view.py  vault_view.py
host/tests/: test_crypto.py  test_vault.py
