[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "osskey"
version = "1.0.0"
description = "Encrypted credential vault with hardware HID injection"
requires-python = ">=3.10"
dependencies = [
    "customtkinter",
    "cryptography",
    "pyserial",
    "crc32c",
    "pynput",
]

[project.scripts]
osskey = "main:main"

[tool.setuptools.packages.find]
include = ["osskey*"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "SIM"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # allow assert in tests
    "SIM117", # allow nested with
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]
"osskey/views/unlock_view.py" = ["S311"]
"osskey/autotype.py" = ["S110", "SIM105"]
"osskey/app.py" = ["S110", "SIM105"]
"osskey/views/vault_view.py" = ["S110", "SIM105", "B904"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["osskey"]
exclude = ["__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateUsage = false
